Production-ready: tiers, schedules, public GET auth, costs and health endpoints

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,15 @@ SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_KEY=your-service-role-key
 
 ANTHROPIC_API_KEY=your-anthropic-key
+APOLLO_API_KEY=your-apollo-key
+CLEARBIT_API_KEY=your-clearbit-key
+HUNTER_API_KEY=your-hunter-key
+SENDGRID_API_KEY=your-sendgrid-key
+LINKEDIN_ACCESS_TOKEN=your-linkedin-token
+TWITTER_API_KEY=your-twitter-key
+FACEBOOK_ACCESS_TOKEN=your-facebook-token
+INSTAGRAM_ACCESS_TOKEN=your-instagram-token
+DEMO_MODE=true
 
 # AI Image Generation
 GOOGLE_AI_API_KEY=your_gemini_key_here
