Add LinkedIn OAuth flow with token storage and auto-refresh

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ CLEARBIT_API_KEY=your-clearbit-key
 HUNTER_API_KEY=your-hunter-key
 SENDGRID_API_KEY=your-sendgrid-key
 LINKEDIN_ACCESS_TOKEN=your-linkedin-token
+LINKEDIN_CLIENT_ID=your-linkedin-client-id
+LINKEDIN_CLIENT_SECRET=your-linkedin-client-secret
+LINKEDIN_REDIRECT_URI=https://summit-voice-ai-backend-production.up.railway.app/api/v1/integrations/linkedin/callback
 TWITTER_API_KEY=your-twitter-key
 FACEBOOK_ACCESS_TOKEN=your-facebook-token
 INSTAGRAM_ACCESS_TOKEN=your-instagram-token
