Use LATE API for unified social publishing

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ LINKEDIN_REDIRECT_URI=https://summit-voice-ai-backend-production.up.railway.app/
 TWITTER_API_KEY=your-twitter-key
 FACEBOOK_ACCESS_TOKEN=your-facebook-token
 INSTAGRAM_ACCESS_TOKEN=your-instagram-token
+LATE_API_KEY=your-late-api-key
+LATE_API_BASE=https://getlate.dev/api/v1
 DEMO_MODE=true
 
 # AI Image Generation
