Add production audit modules: CEO metrics, SSE stream, content generation and waterfall enrichment

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ ANTHROPIC_API_KEY=your-anthropic-key
 APOLLO_API_KEY=your-apollo-key
 CLEARBIT_API_KEY=your-clearbit-key
 HUNTER_API_KEY=your-hunter-key
+ROCKETREACH_API_KEY=your-rocketreach-key
 SENDGRID_API_KEY=your-sendgrid-key
 LINKEDIN_ACCESS_TOKEN=your-linkedin-token
 LINKEDIN_CLIENT_ID=your-linkedin-client-id
@@ -24,6 +25,10 @@ FACEBOOK_ACCESS_TOKEN=your-facebook-token
 INSTAGRAM_ACCESS_TOKEN=your-instagram-token
 LATE_API_KEY=your-late-api-key
 LATE_API_BASE=https://getlate.dev/api/v1
+HEYGEN_API_KEY=your-heygen-key
+DID_API_KEY=your-did-key
+SHOTSTACK_API_KEY=your-shotstack-key
+GOOGLE_CALENDAR_REFRESH_TOKEN=your-google-calendar-refresh-token
 DEMO_MODE=true
 
 # AI Image Generation
