--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ httpx==0.28.1
 croniter==6.0.0
 PyJWT==2.10.1
 python-multipart==0.0.20
+sse-starlette==2.1.3
 twilio==9.3.7
 google-auth==2.36.0
 google-api-python-client==2.154.0
