Revenue sprint optimization: env verification, core agent tuning, and cost controls

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ APOLLO_API_KEY=your-apollo-key
 CLEARBIT_API_KEY=your-clearbit-key
 HUNTER_API_KEY=your-hunter-key
 ROCKETREACH_API_KEY=your-rocketreach-key
+GOHIGHLEVEL_API_KEY=your-gohighlevel-key
+GOHIGHLEVEL_LOCATION_ID=your-gohighlevel-location-id
 SENDGRID_API_KEY=your-sendgrid-key
 LINKEDIN_ACCESS_TOKEN=your-linkedin-token
 LINKEDIN_CLIENT_ID=your-linkedin-client-id
