Production: real Apollo-only lead scraping, fixed outreach templates, week-1 monitoring

--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,8 @@ HEYGEN_API_KEY=your-heygen-key
 DID_API_KEY=your-did-key
 SHOTSTACK_API_KEY=your-shotstack-key
 GOOGLE_CALENDAR_REFRESH_TOKEN=your-google-calendar-refresh-token
-DEMO_MODE=true
+DEMO_MODE=false
+AUTO_DEMO_ON_EMPTY=false
 
 # AI Image Generation
 GOOGLE_AI_API_KEY=your_gemini_key_here
